cloudformation/webserver_cloudformation.yml
Parameters:
    TournamentsSnapshotArn:
        Description: ARN of the latest snapshot of the tournaments database
        Type: String

Resources:
    InternetGateway:
        Type: AWS::EC2::InternetGateway
    ApplicationVpc:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: '172.31.0.0/16'
    GatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId:
                Ref: InternetGateway
            VpcId:
                Ref: ApplicationVpc
    Subnet0:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: us-east-1a
            CidrBlock: '172.31.0.0/24'
            VpcId:
                Ref: ApplicationVpc
    Subnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone: us-east-1b
            CidrBlock: '172.31.1.0/24'
            VpcId:
                Ref: ApplicationVpc
    SubnetAccessRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: ApplicationVpc
    SubnetAccessRoute:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: '0.0.0.0/0'
            GatewayId:
                Ref: InternetGateway
            RouteTableId:
                Ref: SubnetAccessRouteTable
    Subnet0RouteAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: SubnetAccessRouteTable
            SubnetId:
                Ref: Subnet0
    Subnet1RouteAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId:
                Ref: SubnetAccessRouteTable
            SubnetId:
                Ref: Subnet1
    DatabaseSubnetGroup:
        Type: AWS::RDS::DBSubnetGroup
        Properties:
            DBSubnetGroupName: uwr-tournaments-db-subnet-group
            DBSubnetGroupDescription: Defines the subnets in which the tournaments database is present
            SubnetIds:
                - Ref: Subnet0
                - Ref: Subnet1
    WebServerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Specifies access policies over the tournaments web server
            GroupName: uwr-tournaments-server-sg
            VpcId:
                Ref: ApplicationVpc
            SecurityGroupEgress:
                -
                    Description: Allow the webserver to connect with the database
                    CidrIp: '172.31.0.0/16'
                    IpProtocol: tcp
                    FromPort: '5432'
                    ToPort: '5432'
                -
                    Description: Allow HTTPS IPv4 egress to the webserver
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '443'
                    ToPort: '443'
                -
                    Description: Allow HTTP IPv4 egress to the webserver
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '80'
                    ToPort: '80'
                -
                    Description: Allow SSH IPv4 egress to the webserver
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '22'
                    ToPort: '22'
            SecurityGroupIngress:
                -
                    Description: Allow SSH through IPv4
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '22'
                    ToPort: '22'
                -
                    Description: Allow SSH through IPv6
                    CidrIpv6: '::/0'
                    IpProtocol: tcp
                    FromPort: '22'
                    ToPort: '22'
                -
                    Description: Allow connections form within the VPC to the port where the application runs
                    CidrIp: 172.31.0.0/16
                    IpProtocol: tcp
                    FromPort: '8000'
                    ToPort: '8000'
    DatabaseSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Specifies access policies over the tournaments database
            GroupName: uwr-tournaments-db-sg
            VpcId:
                Ref: ApplicationVpc
            SecurityGroupEgress:
                -
                    Description: Allow HTTP IPv4 egress to the database to request updates
                    CidrIp: 0.0.0.0/0
                    IpProtocol: tcp
                    FromPort: '80'
                    ToPort: '80'
                -
                    Description: Allow HTTPS IPv4 egress to the database to request updates
                    CidrIp: 0.0.0.0/0
                    IpProtocol: tcp
                    FromPort: '443'
                    ToPort: '443'
            SecurityGroupIngress:
                -
                    Description: Allows the EC2 instance group to connect to the database
                    SourceSecurityGroupId:
                        'Fn::GetAtt':
                            - WebServerSecurityGroup
                            - GroupId
                    IpProtocol: tcp
                    FromPort: '5432'
                    ToPort: '5432'
    LoadBalancerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Specifies access policies over the tournaments load balancer
            GroupName: 'uwr-tournaments-load-balancer-sg'
            VpcId:
                Ref: ApplicationVpc
            SecurityGroupEgress:
                -
                    Description: Allow the load balancer to connect with the underlying webservers
                    CidrIp: '172.31.0.0/16'
                    IpProtocol: 'tcp'
                    FromPort: '8000'
                    ToPort: '8000'
            SecurityGroupIngress:
                -
                    Description: Allow HTTP IPv4 access to the load balancer
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '80'
                    ToPort: '80'
                -
                    Description: Allow HTTPS IPv4 access to the load balancer
                    CidrIp: '0.0.0.0/0'
                    IpProtocol: tcp
                    FromPort: '443'
                    ToPort: '443'
    TournamentsDatabase:
        Type: AWS::RDS::DBInstance
        Properties:
            DBSnapshotIdentifier:
                Ref: TournamentsSnapshotArn
            AllowMajorVersionUpgrade: true
            AutoMinorVersionUpgrade: true
            DBInstanceClass: db.t3.micro
            DBInstanceIdentifier: uwr-tournaments-db
            Engine: postgres
            EngineVersion: '14.12'
            Port: '5432'
            DBSubnetGroupName:
                Ref: DatabaseSubnetGroup
            VPCSecurityGroups:
                - Ref: DatabaseSecurityGroup
    WebServerAccessKey:
        Type: AWS::EC2::KeyPair
        Properties:
            KeyName: tournaments-server-access-key
            KeyType: rsa
    WebServerRole:
        Type: AWS::IAM::Role
        Properties:
            RoleName: UWRTournamentsInstanceProfileRole
            AssumeRolePolicyDocument:
                Version: 2012-10-17
                Statement:
                    -
                        Effect: Allow
                        Principal:
                            Service: ec2.amazonaws.com
                        Action: sts:AssumeRole
            Policies:
                -
                    PolicyName: WebServerInitialisation
                    PolicyDocument:
                        Version: 2012-10-17
                        Statement:
                            -
                                Effect: Allow
                                Action: cloudformation:DescribeStacks
                                Resource: '*'
                            -
                                Effect: Allow
                                Action: ssm:GetParameter
                                Resource:
                                    - arn:aws:ssm:us-east-1:472572568872:parameter/uwr-tournaments-db-password
                                    - arn:aws:ssm:us-east-1:472572568872:parameter/uwr-tournaments-sendgrid-password
    WebServerInstanceProfile:
        Type: AWS::IAM::InstanceProfile
        Properties:
            InstanceProfileName: UWRTournamentsInstanceProfile
            Roles:
                - Ref: WebServerRole
    WebServerInstance:
        Type: AWS::EC2::Instance
        DependsOn:
            - GatewayAttachment
        Properties:
            ImageId: ami-066784287e358dad1
            InstanceType: t3.small
            IamInstanceProfile:
                Ref: WebServerInstanceProfile
            KeyName:
                Ref: WebServerAccessKey
            AvailabilityZone:
                Fn::GetAtt:
                    - Subnet0
                    - AvailabilityZone
            NetworkInterfaces:
                -
                    DeviceIndex: 0
                    AssociatePublicIpAddress: true
                    GroupSet:
                        - Ref: WebServerSecurityGroup
                    SubnetId:
                        Ref: Subnet0
            UserData:
                Fn::Base64:
                    Fn::Sub:
                        - |
                            #!/bin/bash
                            yum update --assumeyes
                            yum install docker git --assumeyes
                            service docker start
                            usermod -a -G docker ec2-user
                            pushd /home/ec2-user
                            git clone https://github.com/cgledezma1101/uwr-tournament.git
                            chown --recursive ec2-user uwr-tournament
                            pushd uwr-tournament
                            DB_PASSWORD=$(aws ssm get-parameter --region us-east-1 --name uwr-tournaments-db-password | jq --raw-output '.Parameter.Value')
                            SENDGRID_PASSWORD=$(aws ssm get-parameter --region us-east-1 --name uwr-tournaments-sendgrid-password | jq --raw-output '.Parameter.Value')
                            IMAGE_TAG=uwr-tournaments-prod:latest
                            docker buildx build \
                                --tag $IMAGE_TAG \
                                --target production \
                                --build-arg databaseHost=${DatabaseHost} \
                                --build-arg databasePort=${DatabasePort} \
                                --build-arg databasePassword="$DB_PASSWORD" \
                                --build-arg sendgridPassword="$SENDGRID_PASSWORD" \
                                .
                            docker run -p 0.0.0.0:8000:8080 --detach $IMAGE_TAG
                        -
                            DatabaseHost:
                                Fn::GetAtt:
                                    - TournamentsDatabase
                                    - Endpoint.Address
                            DatabasePort:
                                Fn::GetAtt:
                                    - TournamentsDatabase
                                    - Endpoint.Port

    LoadBalancer:
        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        Properties:
            Name: uwr-tournaments-load-balancer
            IpAddressType: ipv4
            Scheme: internet-facing
            Type: application
            SecurityGroups:
                - Ref: LoadBalancerSecurityGroup
            Subnets:
                - Ref: Subnet0
                - Ref: Subnet1
    WebServerTargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
            Name: uwr-tournaments-webserver-tg
            IpAddressType: ipv4
            Port: '8000'
            Protocol: HTTP
            TargetType: instance
            VpcId:
                Ref: ApplicationVpc
            Targets:
                -
                    Id:
                        Ref: WebServerInstance
                    Port: '8000'
    HTTPSListener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            Protocol: HTTPS
            Port: '443'
            LoadBalancerArn:
                Ref: LoadBalancer
            DefaultActions:
                -
                    Order: 1
                    Type: forward
                    TargetGroupArn:
                        Ref: WebServerTargetGroup
            Certificates:
                - CertificateArn: arn:aws:acm:us-east-1:472572568872:certificate/640587ae-a097-494f-965e-4719e4003232
    HTTPRedirectListener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            Protocol: HTTP
            Port: '80'
            LoadBalancerArn:
                Ref: LoadBalancer
            DefaultActions:
                -
                    Order: 1
                    Type: redirect
                    RedirectConfig:
                        Protocol: HTTPS
                        Port: '443'
                        Host: '#{host}'
                        Path: '/#{path}'
                        Query: '#{query}'
                        StatusCode: HTTP_301

Outputs:
    LoadBalancerDns:
        Description: The DNS name on which the load balancer can be reached. The Route53 address table should point to this
        Value:
            Fn::GetAtt:
                - LoadBalancer
                - DNSName
    WebserverIp:
        Description: The IP address on which the web server can be reached.
        Value:
            Fn::GetAtt:
                - WebServerInstance
                - PublicIp
    DatabaseDns:
        Description: DNS on which the database can be reached
        Value:
            Fn::GetAtt:
                - TournamentsDatabase
                - Endpoint.Address
